fix: stats-client and server build